Adicionado endpoint para pegar os posts com base ao autor
